# VerAgents

./: .env  .gitignore  README.md  debug_pdf.py  main.py  pyproject.toml
db/chroma_db/: chroma.sqlite3
demo/: qa_assistant.py
docs/: PlannerSolver.md  ReAct.md  Reflection.md  function_call_agent.md  memory_system.md  plan_and_solve_agent.md  rag_system.md  react_agent.md  reflection_agent.md  tools_system.md
examples/agents/: function_call_agent_demo.py  plan_and_solve_agent_demo.py  planner_solver_demo.py  react_agent_demo.py  react_demo.py  reflection_agent_demo.py  reflection_demo.py  simple_agent_demo.py
examples/core/: llm.py  test_agent.py  test_llm.py
examples/memory/: chroma_demo.py  document_store_demo.py  embedding_demo.py  episodic_memory_demo.py  neo4j_demo.py  perceptual_memory_demo.py  qdrant_demo.py  rag_demo.py  semantic_memory_demo.py  working_memory_demo.py
examples/tools/: async_executor_demo.py  chain.py  easy.py  test_weather.py
scripts/: ingest_pdf.py  test_batch2.py  test_chunk.py  test_ocr.py
tests/: sdk_embedding_test.py
ver_agent/agents/: __init__.py  planner_solver.py  react.py  reflection.py
ver_agent/core/: __init__.py  agent.py  config.py  exceptions.py  llm.py  message.py
ver_agent/tools/: __init__.py  async_executor.py  base.py  chain.py  registry.py
veragents/agents/: __init__.py  function_call.py  plan_and_solve.py  react.py  reflection.py  simple.py
veragents/core/: agent.py  config.py  exceptions.py  llm.py  prompts.py  tool_utils.py
veragents/memory/: __init__.py  base.py  embedding.py  manager.py
(+34 files in other folders)
